test/error/parameter_name_conflict.colgm

func test_same_line(foo: i32, foo: i64) {}






func test_different_line(foo: i32,
                         foo: i64) {}