test/error/parameter_name_conflict.result
Error: "foo" conflicts with an exist parameter
  --> test/error/parameter_name_conflict.colgm:2:31
  | 
2 | func test_same_line(foo: i32, foo: i64) {}
  |                               ^^^^^^^^
  --> test/error/parameter_name_conflict.colgm:2:21
  | 
2 | func test_same_line(foo: i32, foo: i64) {}
  |                     ^^^^^^^^
 note: parameter "foo" is defined here

Error: "foo" conflicts with an exist parameter
  --> test/error/parameter_name_conflict.colgm:10:26
   | 
10 |                          foo: i64) {}
   |                          ^^^^^^^^
  --> test/error/parameter_name_conflict.colgm:9:26
  | 
9 | func test_different_line(foo: i32,
  |                          ^^^^^^^^
 note: parameter "foo" is defined here